# imperial_group_project_aleth

./: .gitmodules  CMakeLists.txt  README.md
DetectionLogic/: DetectionLogic.cpp  DetectionLogic.dl
DetectionLogic/test1/: call_entry.facts  call_exit.facts
DetectionLogic/test3/: direct_call.facts
DetectionLogic/test4/: direct_call.facts
DetectionLogic/test5/: direct_call.facts
DetectionLogic/test6/: direct_call.facts
DetectionLogic/test7/: call_result.facts  in_condition.facts  is_output.facts
aleth/: CMakeLists.txt  main.cpp
ethploit/: CMakeLists.txt  Executiontrace.cpp  Executiontrace.h
ethploit-test/: CMakeLists.txt  main.cpp
ethploit-test/boost-test/: boost-test  boost-test.cpp  makefile
libethereum/: CMakeLists.txt  Executive.cpp
libethploit/: CMakeLists(evmanalyser).txt  CMakeLists.txt  CallTrace.cpp  CallTrace.h  DetectionLogic.cpp  EVMAnalyser.cpp  EVMAnalyser.h  ExecutionTrace.cpp  ExecutionTrace.h  JSONLogger.cpp  JSONLogger.h  evm_analyser.cpp  evm_analyser.h  type.cpp  type.h
libethploit/detection_logic/: DetectionLogic.dl
libethploit/detection_logic/test1/: call_entry.facts  direct_call.facts
libethploit/detection_logic/test2/: direct_call.facts
libethploit/locked_ether/: locked_ether.cpp  locked_ether.dl
libethploit/reentrancy/: reentrancy.cpp  reentrancy.dl
libethploittest/: CMakeLists.txt  ExecutionTraceTest.cpp
libethploittest/calltrace-test/: CMakeLists.txt  CallTraceTest.cpp
libethploittest/evmanalyser-test/: CMakeLists.txt  EVMAnalyserTest.cpp  libevmanalyser_test.cpp
libethploittest/evmanalyser-test/turtle/: version.hpp
libethploittest/executiontrace-test/: CMakeLists.txt  ExecutionTraceTest.cpp
libevm/: CMakeLists.txt  LegacyVM.cpp  LegacyVMCalls.cpp
mcpp-2.7.2/: Makefile  config.status  configure.lineno  libtool  reinstall.sh
mcpp-2.7.2/src/: Makefile  config.h  mcpp
mcpp-2.7.2/tests/: Makefile
smart-contracts/: Contract1.sol  Contract2.sol  TestContracts.sol  contracts.sol
smart_contracts/truffle/: truffle-config.js
smart_contracts/truffle/contracts/: Dao.sol  DaoAttacker.sol  HoneyPot.sol  HoneyPotCollect.sol  Library.sol  LockedEther.sol  Migrations.sol  ParityBug.sol  TestParity.sol  UnhandledException.sol
smart_contracts/truffle/migrations/: 2_deploy_contracts.js
smart_contracts/truffle/mock/: Malicious.sol  Vulnerable.sol
souffle/share/man/man1/: souffle-compile.1  souffle-config.1  souffle-profile.1  souffle.1
souffle/vulnerability_detection_logic/Re-entrancy/: reentrancy.dl
souffle/vulnerability_detection_logic/Re-entrancy/input_not_vulnerability_test1/: direct_call.facts
souffle/vulnerability_detection_logic/Re-entrancy/input_reentrancy_test1/: direct_call.facts
souffle/vulnerability_detection_logic/Re-entrancy/input_reentrancy_test2/: direct_call.facts
